<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pbru.permsook.wiwat.bookroompbru.CalendaActivity"
    android:background="@drawable/bg10">

    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/calendarView"
        android:background="#50ffffff"
        android:layout_above="@+id/linbtnCal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linbtnCal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:id="@+id/textView18"
            android:background="#50ffffff"
            android:textSize="@dimen/h2"
            android:layout_marginTop="8dp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:background="#50ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:id="@+id/textView19"
            android:background="#50ffffff"
            android:textSize="@dimen/h2"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ragtime"
            android:background="#50ffffff">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bedorenoon"
                android:id="@+id/radioButton3" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afternoon"
                android:id="@+id/radioButton4" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullday"
                android:id="@+id/radioButton5" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Order"
                android:id="@+id/button6"
                android:layout_gravity="center_horizontal"
                android:onClick="clickOrdercalenda" />

        </RadioGroup>

    </LinearLayout>

</RelativeLayout>
